--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,6 @@
 </head>
 
 <body>
-    <noscript>
-    You need to enable JavaScript to run this app.
-  </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -38,6 +35,21 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        // TODO: Replace with your project's customized code snippet
+        var config = {
+            apiKey: "<API_KEY>",
+            authDomain: "<PROJECT_ID>.firebaseapp.com",
+            databaseURL: "https://<DATABASE_NAME>.firebaseio.com",
+            projectId: "<PROJECT_ID>",
+            storageBucket: "<BUCKET>.appspot.com",
+            messagingSenderId: "<SENDER_ID>",
+        };
+        firebase.initializeApp(config);
+    </script>
+    <script src="../src/index.js"></script>
 </body>
 
 </html>
