Complete server issue, Delete Cache(server, browser) wtf

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
-    <title>React App</title>
+    <title>MOMF</title>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="https://png.icons8.com/metro/1600/guitar.png">
 </head>
 
 <body>
+    <noscript>
+        You need to enable JavaScript to run this app.
+    </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
