edit_css_bgc,count_Detail

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         gtag('config', 'UA-143097314-1');
     </script>
 
-    <!--Google Analytics -->
+    <!--Google Adsense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({
