add_google-site-verification

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
     <meta property="twitter:url" content="https://momf-b4498.firebaseapp.com/" />
     <meta property="twitter:image" content="http://mblogthumb2.phinf.naver.net/MjAxNzA2MzBfMjAz/MDAxNDk4ODA5NDIxMjU3.pzMutJ85u-KfAyzuYhwYlsL4xlTxWJOmHcnazCm9W6Ag.-RfqcrzdtzmYc6PXHpnsYgstjG9CU8dVW0KwikpkRDIg.JPEG.ticketpower/image_4779620211498809361902.jpg?type=w800"
     />
+    <meta name="google-site-verification" content="pfSFqPyc49x1z3igg10o8UjmBmRm3hLG8l4ZR4QnMMc" />
 </head>
 
 <body>
