--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,7 @@
     <script type='text/javascript'>
         //<![CDATA[
         // 사용할 앱의 JavaScript 키를 설정해 주세요.
+        console.log(process.env)
         Kakao.init('0d57c606a0bd8818e5cbf38e6a903106');
 
         function addPlusFriend() {
